--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-host-qrcode",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "packageManager": "pnpm@8.6.12",
   "description": "",
   "license": "MIT",
@@ -72,11 +72,12 @@
     }
   },
   "dependencies": {
+    "boxen": "^7.1.1",
     "hqr": "^0.0.1",
+    "kolorist": "^1.8.0",
     "unplugin": "^1.5.0"
   },
   "devDependencies": {
-    "@hunghg255/eslint-config": "^0.40.2",
     "@types/node": "^20.5.2",
     "bumpp": "^9.2.0",
     "chalk": "^5.3.0",
