--- a/playground/package.json
+++ b/playground/package.json
@@ -5,8 +5,8 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "type": "module",
   "devDependencies": {
-    "vite": "^4.4.9",
-    "vite-plugin-inspect": "^0.7.38"
+    "vite": "^4.4.9"
   }
 }
